2007-02-02 [colin]	0.10.0cvs3

	* src/feed.c
		Fix indent and debug_print buglet

2007-02-02 [colin]	0.10.0cvs2

	* src/parsers.c
		Fix memory leak

2007-01-24 [colin]	0.10.0cvs1

	* src/feed.c
		Fix memory and fd leak on error path
		by Pawel Pekala

2007-01-15 [paul]	0.10.0

	0.10.0 released

2007-01-11 [ticho]	0.9.0cvs1

	* src/parsers.c
		Parse comments also from wordpress 2.0.4 (XML tag change).

2007-01-09 [paul]	0.9.0

	0.9.0 released

2007-01-09 [paul]	0.8.0cvs4

	* po/es.po
	* po/fi.po
	* po/it.po
	* po/pt_BR.po
	* po/sk.po
		updated by Ricardo Mones Lastra, Tommi
		Pirinen, Andrea Spadaccini, Frederico
		Goncalves Guimaraes, and Andrej Kacian

2007-01-08 [colin]	0.8.0cvs3

	* src/rssyl.c
		Start updating feeds two seconds 
		after startup to avoid blocking the
		GUI

2006-12-28 [ticho]	0.8.0cvs2

	* src/feed.c
	* src/feed.h
	* src/rssyl.c
	* src/rssyl_cb_menu.c
	* src/rssyl_prefs.c
	* src/rssyl_prefs.h
		Add option to refresh all feeds on application startup. Defaults
		to FALSE.

2006-12-15 [ticho]	0.8.0cvs1

	* configure.ac
	* src/plugin.c
	* src/rssyl.h
		Use check_plugin_version() for version check.

2006-12-04 [paul]	0.8.0

	0.8 released

2006-11-28 [paul]	0.7.0cvs6

	* configure.ac
		bump required version of Claws
		following renaming
		Thanks to Charles Edwards for the
		reminder

2006-11-27 [paul]	0.7.0cvs5

	* debian/README.Debian
	* src/feed.c
	* src/plugin.c
	* src/rssyl.c
	* src/rssyl_gtk.c
		renaming

2006-11-17 [wwp]	0.7.0cvs4

	* src/feed.c
		Fix my previous commit, missing an #include to defs.

2006-11-17 [wwp]	0.7.0cvs3

	* src/feed.c
		Don't use a hardcoded plugin URI as it's in defs.

2006-11-08 [paul]	0.7.0cvs2

	* src/feed.c
	* src/rssyl.h
		update Claws Mail url

2006-11-07 [paul]	0.7.0cvs1

	* COPYING
	* ChangeLog
	* configure.ac
	* debian/README.Debian
	* debian/changelog
	* debian/control
	* debian/copyright
	* debian/files
	* debian/rules
	* src/Makefile.am
	* src/feed.c
	* src/plugin.c
	* src/rssyl_cb_menu.c
		Name change
