@@ -64,3 +64,4 @@
 ( cvs diff -u -r 1.1.2.64 -r 1.1.2.65 src/feed.c;  ) > 0.10.0cvs1.patchset
 ( cvs diff -u -r 1.1.2.12 -r 1.1.2.13 src/parsers.c;  ) > 0.10.0cvs2.patchset
 ( cvs diff -u -r 1.1.2.65 -r 1.1.2.66 src/feed.c;  ) > 0.10.0cvs3.patchset
+( cvs diff -u -r 1.1.2.66 -r 1.1.2.67 src/feed.c;  cvs diff -u -r 1.1.2.17 -r 1.1.2.18 src/feed.h;  cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/parsers.c;  ) > 0.10.0cvs4.patchset
