@@ -1,3 +1,11 @@
+2007-02-04 [ticho]	0.10.0cvs4
+
+	* src/feed.c
+	* src/feed.h
+	* src/parsers.c
+		Parse enclosure tag for rss 2.0 feeds, if there is any. Suggested
+		by David Bercot.
+
 2007-02-02 [colin]	0.10.0cvs3
 
 	* src/feed.c
